--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ serde = { version = "*", features = ["derive"]}
 serde_json = "*"
 progressing = "*"
 clap = { version = "4.2.7", features = ["derive"] }
+
+[lints.clippy]
+unwrap_used = "deny"
